Commit to the script which generated the dataset from all nanobase strucutres

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,8 @@
                 "--num_workers", "2",
                 "--lr", "0.001",
             ],
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "justMyCode": false
         }
     ]
 }
